crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_runtime_evaluated_decorators_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `numpy` into a type-checking block
  --> runtime_evaluated_decorators_2.py:10:8
 8 | from attrs import frozen
 9 |
10 | import numpy  # TC002
   |        ^^^^^
help: Move into type-checking block
   |
9  |
   - import numpy  # TC002
10 + from typing import TYPE_CHECKING
11 +
12 + if TYPE_CHECKING:
13 +     import numpy
14 |
   |
note: This is an unsafe fix and may change runtime behavior
