crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_typing_modules_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
 --> typing_modules_2.py:7:24
  |
6 | def func():
7 |     from pandas import DataFrame
  |                        ^^^^^^^^^
8 |
9 |     df: DataFrame
help: Move into type-checking block
   |
4  |
5  + if typing_extensions.TYPE_CHECKING:
6  +     from pandas import DataFrame
7  +
8  |
9  | def func():
   -     from pandas import DataFrame
10 |
   |
note: This is an unsafe fix and may change runtime behavior
